--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello Galax</h1>
-    <img src="world.jpg" alt="Big Dog">
+    <img src="world.png" alt="Big Dog">
   </body>
 </html>
